Google forms Test 2, change master to main

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Invitación XV Años</title>
 </head>
 <body>
-    This is a form test
+    This is to check if the google forms works in github pages
 
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc2aE1N3JKD3YxLSoVwKRCxO_L6estU-xj0OmxVo64xRdU20g/viewform?embedded=true" width="640" height="658" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
 </body>
