Added presentation section

--- a/index.html
+++ b/index.html
@@ -3,12 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Invitación XV Años</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="shortcut icon" type="image/png" href="img/xv_icon.png"/>
+    <title>Mis XV Años</title>
 </head>
 <body>
-    This is to check if the google forms works in github pages
-    Second test third
 
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc2aE1N3JKD3YxLSoVwKRCxO_L6estU-xj0OmxVo64xRdU20g/viewform?embedded=true" width="640" height="658" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
+    <main>
+
+        <section id="front-page">
+            
+            <img src="img/tiara_icon.svg">
+            <p>Miriam</p>
+        </section>
+
+        <!--<section id="confirmation">
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc2aE1N3JKD3YxLSoVwKRCxO_L6estU-xj0OmxVo64xRdU20g/viewform?embedded=true" width="640" height="658" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
+        </section>-->
+
+    </main>
+
 </body>
 </html>
