Front page finished

--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
 
         <section id="front-page">
             
+            <p class="misXV">MIS XV AÑOS</p>
+
             <img src="img/tiara_icon.svg">
-            <p>Miriam</p>
+            <p class="name">Miriam</p>
+
         </section>
 
         <!--<section id="confirmation">
