Added invitation section

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/animate.min.css"/>
     <link rel="shortcut icon" type="image/png" href="img/xv_icon.png"/>
+
     <title>Mis XV Años</title>
 </head>
 <body>
 
     <main>
-
         <section id="front-page">
             
             <p class="misXV">MIS XV AÑOS</p>
@@ -20,7 +21,17 @@
 
         </section>
 
+        <section id="invitation" onshow="writer()">
+            <p id="invitation-writer"><!--Quiero invitarte por ser tan especial en mi vida, 
+                a celebrar conmigo y junto a mi familia mis quince años de vida.
+                
+                THIS IS WRITED LETTER BY LETTER WITH CSS-->
+            </p>
+        </section>
+
     </main>
+
+    <script src="js/writer.js"></script>
 
 </body>
 </html>
