Countdown in progress

--- a/index.html
+++ b/index.html
@@ -29,9 +29,16 @@
             </p>
         </section>
 
+        <section id="countdown">
+            <p>El gran día es en</p>
+            <p id="countdown-text"></p>
+
+        </section>
+
     </main>
 
     <script src="js/writer.js"></script>
+    <script src="js/countdown.js"></script>
 
 </body>
 </html>
