Countdown section added

--- a/index.html
+++ b/index.html
@@ -30,8 +30,20 @@
         </section>
 
         <section id="countdown">
-            <p>El gran día es en</p>
+            <h1>El gran día es en</h1>
             <p id="countdown-text"></p>
+            <div id="countdown-labels">
+                <span>Días - </span>
+                <span>Horas - </span>
+                <span>Minutos -  </span>
+                <span>Segundos</span>
+            </div>
+
+            <div id="countdown-date">
+                <h2>29 de Marzo de 2025<h2>
+                <h3>17:30 horas</h3>
+            </div>
+           
 
         </section>
 
