Photo section added (in progress to make it better)

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
 
         </section>
 
+        <section id="photo">
+            <img src="img/marco.png">
+        </section>
+
         <section id="invitation" onshow="writer()">
             <p id="invitation-writer"><!--Quiero invitarte por ser tan especial en mi vida, 
                 a celebrar conmigo y junto a mi familia mis quince años de vida.
@@ -43,8 +47,6 @@
                 <h2>29 de Marzo de 2025<h2>
                 <h3>17:30 horas</h3>
             </div>
-           
-
         </section>
 
     </main>
