schedule added (in progress)

--- a/index.html
+++ b/index.html
@@ -49,6 +49,31 @@
             </div>
         </section>
 
+        <section id="schedule">
+            <h1>Horario y lugares</h1>
+            <ul>
+                <li style="--accent-color:#9253ae">
+                    <div class="date">17:30 horas</div>
+                    <div class="title">CEREMONIA</div>
+                    <div class="descr">Parroquia de San Luis Rey.</div>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d461.968575487442!2d-100.96072511818966!3d22.13555883604049!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x842aa215d2fa7013%3A0x9039204b7a194f10!2sParroquia%20de%20San%20Luis%20Rey!5e0!3m2!1ses-419!2smx!4v1739158044115!5m2!1ses-419!2smx" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <div class="descr"><br> Laguna de Términos 785.<br>San Luis Rey, <br>78350 San Luis Potosí, S.L.P.</div>
+                </li>
+                <li style="--accent-color:#FBCA3E">
+                    <div class="date">19:30 horas</div>
+                    <div class="title">EVENTO</div>
+                    <div class="descr">Buonarroti Eventos</div>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3694.411889125508!2d-101.0316642!3d22.186447899999997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x842a9efc9d53b441%3A0x2ff456606366a1d7!2sBuonarroti%20Eventos!5e0!3m2!1ses-419!2smx!4v1739160978373!5m2!1ses-419!2smx" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <div class="descr"><br> Anillo Perif. 170. <br> Arboledas de Jacarandas.<br> 78130 San Luis Potosí, S.L.P.</div>
+                 
+                </li>
+                <li style="--accent-color:#E24A68">
+                    <div class="date">21:00 horas</div>
+                    <div class="title">¡BAILE!</div>
+                </li>
+            </ul>
+        </section>
+
     </main>
 
     <script src="js/writer.js"></script>
