Parents section added

--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
 
         </section>
 
+        <section id="parents">
+            <h1>MIS PAPÁS</h1>
+            <p class="wow animate__animated animate__fadeInLeft">MA. Guadalupe Cruz Jimenez</p>
+            <p class="wow animate__animated animate__fadeInRight">Juan Salvador Flores Rodriguez</p>
+        </section>
+
         <section id="photo">
             <img src="img/marco.png">
         </section>
