Song section added

--- a/index.html
+++ b/index.html
@@ -79,6 +79,10 @@
             </ul>
         </section>
 
+        <section id="song">
+            <h1>Escucha mi cancion favorita</h1>
+            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/3yzrYuX1vuiuoEJGEzp61r?utm_source=generator" width="75%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>        </section>
+
     </main>
 
     <script src="js/writer.js"></script>
